# racani

./: README.md
1lab/: BSpline.py  GLDrawing.py  Object3D.py  Polygon.py  Transformations.py  Vertex.py  main.py  misc.py
2lab/: 2lab.cpp
3lab/: 3lab  CMakeLists.txt  ColorGradient.cpp  main.cpp
3lab/geneticAlgorithm/: GeneticAlgIterator.cpp  TwoDimGeneticAlg.cpp  TwoDimRastriginFunction.cpp
3lab/include/: ColorGradient.h  ColorTuple.h  GeneticAlg.h  GeneticAlgIterator.h  TwoDimGeneticAlg.h  TwoDimOptProblem.h  TwoDimRastriginFunction.h  Vertex.h
